--- a/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
@@ -9,6 +9,7 @@
     <text name="InvalidUserNameOrPassword" value="用户名或密码无效" />
     <text name="ThereIsNoTenantDefinedWithName{0}" value="租户 {0}不存在" />
     <text name="TenantIsNotActive" value="租户 {0} 未激活." />
+    <text name="UnknownTenantId{0}">未知租户Id {0}</text>
     <text name="UserIsNotActiveAndCanNotLogin" value="用户 {0} 未激活，不能登录." />
     <text name="PleaseEnterLoginInformation" value="请输入登录信息" />
     <text name="TenancyName" value="租户标识" />
@@ -80,6 +81,7 @@
     <text name="RolePermission">角色权限</text>
     <text name="EditRole">编辑角色</text>
     <text name="DeleteRolesConfirm">确认删除该角色？</text>
+    <text name="RoleNotFound">角色 {0} 不存在.</text>
 
     <text name="CreateNewUser">创建新用户</text>
     <text name="UserDetails">用户详情</text>
