--- a/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
@@ -103,6 +103,8 @@
     <text name="OrgUnitNotFound">组织单元 {0} 不存在.</text>
     <text name="UserNotFound">用户 {0} 不存在.</text>
     <text name="PhoneNumberDuplicated">手机号 {0} 已存在.</text>
+    <text name="InvalidPhoneNumber">不正确的手机号: {0}.</text>
+    <text name="InvalidEmailAddress">不正确的邮件地址: {0}.</text>
 
     <text name="SmartSecurityFeature">智慧安防功能包</text>
     <text name="SmartPassFeature">智慧通行功能包</text>
