--- a/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
@@ -108,6 +108,8 @@
     <text name="OrgUnitNotFound">Organization Unit {0} not found.</text>
     <text name="TenantDeleteWarningMessage">Tenant {0} will be deleted.</text>
     <text name="PhoneNumberDuplicated">Phone number {0} duplicated.</text>
+    <text name="InvalidPhoneNumber">Invalid phone number: {0}.</text>
+    <text name="InvalidEmailAddress">Invalid email address: {0}.</text>
     <text name="SearchWithThreeDot">Search...</text>
     <text name="SmartSecurityFeature">Smart security feature</text>
     <text name="SmartPassFeature">Smart pass feature</text>
