--- a/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
@@ -110,6 +110,7 @@
     <text name="PhoneNumberDuplicated">Phone number {0} duplicated.</text>
     <text name="InvalidPhoneNumber">Invalid phone number: {0}.</text>
     <text name="InvalidEmailAddress">Invalid email address: {0}.</text>
+    <text name="NeedLoginAsTenantAdmin">Please log in as tenant administrator before attempting to reset password.</text>
     <text name="SearchWithThreeDot">Search...</text>
     <text name="SmartSecurityFeature">Smart security feature</text>
     <text name="SmartPassFeature">Smart pass feature</text>
