--- a/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
@@ -111,6 +111,7 @@
     <text name="InvalidPhoneNumber">Invalid phone number: {0}.</text>
     <text name="PhoneNumberNotExist">Phone number: {0} not exist.</text>
     <text name="WrongSmsAuthCode">Sms authentication code not correct!</text>
+    <text name="EmailAddressDuplicated">Email address {0} duplicated.</text>
     <text name="InvalidEmailAddress">Invalid email address: {0}.</text>
     <text name="NeedLoginAsTenantAdmin">Please log in as tenant administrator before attempting to reset password.</text>
     <text name="SearchWithThreeDot">Search...</text>
