--- a/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
@@ -109,6 +109,7 @@
     <text name="EmailAddressDuplicated">电子邮件地址 {0} 已存在.</text>
     <text name="InvalidEmailAddress">不正确的邮件地址: {0}.</text>
     <text name="NeedLoginAsTenantAdmin">需要以租户管理员身份登录才可重置密码</text>
+    <text name="ExistingPasswordWrong">原密码错误，请联络管理员重置密码</text>
 
     <text name="SmartSecurityFeature">智慧安防功能包</text>
     <text name="SmartPassFeature">智慧通行功能包</text>
