do some localization

--- a/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX-zh-Hans.xml
@@ -114,6 +114,8 @@
     <text name="SmartSecurityFeature">智慧安防功能包</text>
     <text name="SmartPassFeature">智慧通行功能包</text>
     <text name="UserExpired">该用户已于 {0} 失效</text>
+    <text name="EmailAdressNotExist">您输入的邮箱地址不存在</text>
+
   </texts>
 </localizationDictionary>
 
