--- a/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
@@ -119,5 +119,7 @@
     <text name="SmartSecurityFeature">Smart security feature</text>
     <text name="SmartPassFeature">Smart pass feature</text>
     <text name="UserExpired">Your user has been expired at {0}</text>
+    <text name="EmailAdressNotExist">Your email address does not exist</text>
+
   </texts>
 </localizationDictionary>
