localization configuration and  dockerfile optimization

--- a/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
+++ b/src/CharonX.Core/Localization/SourceFiles/CharonX.xml
@@ -118,7 +118,7 @@
     <text name="SearchWithThreeDot">Search...</text>
     <text name="SmartSecurityFeature">Smart security feature</text>
     <text name="SmartPassFeature">Smart pass feature</text>
-    <text name="UserExpired">Your user has been expired at {0}</text>
+    <text name="UserExpired">The user has been expired at {0}</text>
     <text name="EmailAdressNotExist">Your email address does not exist</text>
 
   </texts>
